update copyright year and make thumbnail a link

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -135,7 +135,7 @@
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
               {% if content|thumb %}
-                <img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/>
+                <a href="{{ content.get_absolute_url }}"><img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/></a>
               {% endif %}
             </div>
             {% if section != content.section %}
