--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,9 @@
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
               {% if content|thumb %}
-                <img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/>
+                <a href="{{ content.get_absolute_url }}">
+                  <img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/>
+                </a>
               {% endif %}
             </div>
             {% if section != content.section %}
@@ -60,7 +62,9 @@
               <div class="card mb-2 rounded-0 section-card-0">
                 <div class="img-wrapper">
                   {% if content|thumb %}
-                    <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    <a href="{{ content.get_absolute_url }}">
+                      <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    </a>
                   {% endif %}
                 </div>
                 <div class="card-body">
@@ -79,7 +83,9 @@
               <div class="card mb-2 rounded-0 section-card-0">
                 <div class="img-wrapper">
                   {% if content|thumb %}
-                    <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    <a href="{{ content.get_absolute_url }}">
+                      <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    </a>
                   {% endif %}
                 </div>
                 <div class="card-body">
@@ -98,7 +104,9 @@
               <div class="card mb-2 rounded-0 section-card-0">
                 <div class="img-wrapper">
                   {% if content|thumb %}
-                    <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    <a href="{{ content.get_absolute_url }}">
+                      <img class="card-img-top mx-auto rounded-0 d-block" src="{{ content|thumb:"huge" }}"/>
+                    </a>
                   {% endif %}
                 </div>
                 <div class="card-body">
@@ -135,7 +143,9 @@
           <div class="card align-middle rounded-0 mb-4 section-card-1">
             <div class="img-wrapper">
               {% if content|thumb %}
-                <a href="{{ content.get_absolute_url }}"><img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/></a>
+                <a href="{{ content.get_absolute_url }}">
+                  <img class="card-img-top mx-auto rounded-0 d-block" style="overflow: hidden" src="{{ content|thumb:"huge" }}"/>
+                  </a>
               {% endif %}
             </div>
             {% if section != content.section %}
