--- a/home/templates/home/content.html
+++ b/home/templates/home/content.html
@@ -137,6 +137,10 @@
           <br/>
         {% endif %}
 
+        {% for poll in content.polls %}
+          {% include "content/poll.html" %}
+        {% endfor %}
+
         <div class="card latest-stories">
           {% if related_content.count > 0 %}
             <div class="card-header mb-3">
