Banners and newsletter subscription

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -7,6 +7,7 @@ $fugaz-one: "Fugaz One", serif;
 
 /* COLORS */
 $site-gray: #373737;
+$site-light-gray: #f0f0f0;
 $site-white: #ffffff;
 $site-red: #c54c3a;
 $site-light-red: lighten($site-red, 10);
