--- a/home/static/home/styles/styles.scss
+++ b/home/static/home/styles/styles.scss
@@ -1,4 +1,5 @@
 /* Themes, fonts, backgrounds, responsive breakpoints, etc */
+@import "imports/_normalize";
 @import "custom-settings";
 
 /* Global */
@@ -452,15 +453,56 @@ body {
 }
 
 /* Add Breaking */
-.breaking-banner {
+.banner, .breaking-banner {
     border-radius: 0;
-    background-color: $site-red;
     text-align: center;
     padding: 10px 0;
     a {
         color: white;
         &:hover {
-            color: $site-gray;
+            color: $site-light-gray;
         }
+    }
+}
+
+.banner {
+    background-color: $site-gray;
+}
+
+.breaking-banner {
+    background-color: $site-red;
+}
+
+form {
+    .asterisk {
+        color: $site-red;
+        font-family: $site-header-font;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 0;
+        font-family: $site-header-font;
+    }
+
+    input[type=text], input[type=email] {
+        margin-bottom: 5px;
+        padding: 8px;
+        width: Min(400px, 100%);
+        border: 0.5px solid $site-gray;
+
+        &.birthday {
+            width: 50px;
+        }
+    }
+
+    input[type=submit] {
+        margin-top: 5px;
+        padding: 8px;
+        font-family: $site-header-font;
+        font-size: 20px;
+        background-color: $site-light-gray;
+        border: 0.5px solid $site-gray;
+        cursor: pointer;
     }
 }
